# platonic-init

./: .gitignore  LICENSE  README.md  chebyshev_explainer.jsx  prek.toml  pyproject.toml
.github/workflows/: lint.yml
artifacts/: analytic_fit_report.json  analytic_subspace.pt  init_eval.json
artifacts/demo_basis_sweep/: analytic_subspace_chebyshev.pt  analytic_subspace_fourier.pt  analytic_subspace_poly_exp.pt  init_eval_chebyshev.json  init_eval_fourier.json  init_eval_poly_exp.json  weight_subspace.pt  weight_subspace_summary.json
artifacts/experiments/dyck_5k_10k/analysis/: analytic_fit_report.json  rebasin_report.json  weight_subspace_summary.json
artifacts/experiments/dyck_5k_10k/pretraining/: init_eval.json  init_eval_basis_curves.json
artifacts/experiments/dyck_d10_20k_demo/analysis/: weight_subspace_summary.json
artifacts/experiments/dyck_d10_20k_demo/pretraining/: init_eval.json  init_eval_basis_curves.json
artifacts/experiments/dyck_d10_5k_demo/pretraining/: init_eval.json  init_eval_basis_curves.json
configs/: experiment.yaml  experiment_dyck_5k_10k.yaml  experiment_dyck_d10_20k_demo.yaml  experiment_dyck_d10_5k_demo.yaml  experiment_tinygpt2_shuffle_dyck_c4_weight_transfer.yaml  gpt2_c4_ppt_reproduction.yaml  gpt2_large_c4_ppt_reproduction.yaml  gpt2_medium_c4_ppt_reproduction.yaml  gpt2_tiny_c4_ppt_reproduction.yaml  gpt2_tiny_c4_ppt_reproduction_muon.yaml  gpt2_xl_c4_ppt_reproduction.yaml
configs/tmp/: experiment_dyck_d10_5k_demo_chebyshev.yaml  experiment_dyck_d10_5k_demo_fourier.yaml  experiment_dyck_d10_5k_demo_poly_exp.yaml  experiment_dyck_d10_5k_demo_rbf.yaml
data/: dyck_d10_20k.txt  dyck_d10_40k.txt  dyck_d10_5k.txt  synthetic.txt
hpc/: torch.bashrc  torch.tmux.conf
notebooks/: aesthetics.py  dyck-5k-10k-overview.ipynb  dyck-tinygpt2-basis-sweep.ipynb  gpt2_c4_ppt_reproduction_analysis.ipynb  gpt2_large_c4_ppt_reproduction_analysis.ipynb  gpt2_medium_c4_ppt_reproduction_analysis.ipynb  gpt2_tiny_c4_ppt_reproduction_analysis.ipynb  gpt2_tiny_c4_ppt_reproduction_muon_analysis.ipynb  platonic-experiment-overview-template.ipynb  tinygpt2_c4_fit_reproduction_analysis.ipynb
output/jupyter-notebook/: dyck-5k-10k-overview.ipynb  dyck-tinygpt2-basis-sweep.ipynb  platonic-experiment-overview-template.ipynb
scripts/: analyze_subspace.sh  bootstrap_flash_attention_overlay.sh  bootstrap_flash_attention_scratch_venv.sh  cache_init_eval_data.py  check_flash_attention.sh  fit_analytic.sh  generate_dyck.py  generate_formal_language.py  install_flash_attention.sh  rebuild_torch29_flash_wheel_env.sh  remove_overlay_venv.sh  run_pipeline.sh  srun_flash_attention.sh  submit_gpt2.sh  submit_gpt2_large.sh  submit_gpt2_medium.sh  submit_gpt2_tiny.sh  submit_gpt2_tiny_muon.sh  submit_gpt2_xl.sh  submit_ppt_experiment.sh  torch_generate_shuffle_dyck.sbatch  torch_job.sbatch  torch_paper_prepare_data.sbatch  torch_paper_prepretrain.sbatch  torch_paper_pretrain.sbatch  torch_paper_pretrain_fits.sbatch  train_sweep.sh
src/platonic_init/: __init__.py  aesthetics.py  analytic.py  analyze.py  basis.py  check_flash_attention.py  config.py  data.py  env.py  eval_basis_inits.py  eval_init.py  formal_language.py  init_fn.py  initialization.py  optimizers.py  paths.py  pipeline.py  pipeline_stages.py  rebasin.py  runtime.py  support.py  train.py  training.py
tests/: test_formal_language.py  test_pipeline.py  test_rebasin.py
wandb/: latest-run
wandb/run-20260305_142850-a8ksks28/: run-a8ksks28.wandb
wandb/run-20260305_142850-a8ksks28/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260305_143022-74l58p0y/: run-74l58p0y.wandb
wandb/run-20260305_143022-74l58p0y/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
(+116 files in other folders)
