[project]
name = "platonic-init"
version = "0.1.0"
description = "Experiments for low-dimensional platonic initialization"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch>=2.4,<2.5",
  "transformers>=4.46.0",
  "trl>=0.11.0",
  "datasets>=2.20.0",
  "accelerate>=0.34.0",
  "flash-attn==2.8.3; sys_platform != 'darwin'",
  "safetensors>=0.4.5",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "scikit-learn>=1.5.0",
  "tqdm>=4.66.0",
  "pyyaml>=6.0.2",
  "wandb>=0.19.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "matplotlib>=3.9.0",
  "prek>=0.3.6",
  "ruff>=0.12.7",
  "seaborn>=0.13.0",
  "ty>=0.0.4",
]

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
]
notebook = [
  "jupyterlab>=4.2.0",
  "notebook>=7.2.0",
  "ipykernel>=6.29.0",
  "pip>=24.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.sources]
flash-attn = [
  { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.4cxx11abiFALSE-cp312-cp312-linux_x86_64.whl", marker = "platform_system == 'Linux' and platform_machine == 'x86_64' and python_version == '3.12'" },
]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = [
  "artifacts/",
  "data/",
  "logs/",
  "output/",
  "research_notes/",
  "runs/",
  "wandb/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
exclude = ["**/*.ipynb"]
